manifests/deploy/dev/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: hktv-ars
  labels:
    name: hktv-ars
