manifests/deploy/dev/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: hktv-ars-backend
  name: hktv-ars-backend
  namespace: hktv-ars
spec:
  selector:
    matchLabels:
      app: hktv-ars-backend
  template:
    metadata:
      labels:
        app: hktv-ars-backend
    spec:
      containers:
        - image: <CI_REGISTRY>/<PROJECT_ID>/<CI_APPLICATION_REPOSITORY>:<TAGS>
          imagePullPolicy: Always
          name: hktv-ars-backend
          resources:
            requests:
              memory: '0.5Gi'
              cpu: '100m'
            limits:
              memory: '1Gi'
              cpu: '1'
          lifecycle:
            preStop:
              exec:
                command: [ 'sh', '-c', 'sleep 10' ]
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /hktv_ars/healthcheck
              port: 8090
              scheme: HTTP
            initialDelaySeconds: 300
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 3
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /hktv_ars/healthcheck
              port: 8090
              scheme: HTTP
            initialDelaySeconds: 300
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 3
      affinity:
        podAntiAffinity:
          preferredDuringSchedulingIgnoredDuringExecution:
            - weight: 100
              podAffinityTerm:
                labelSelector:
                  matchExpressions:
                    - key: app
                      operator: In
                      values:
                        - hktv-ars-backend
                topologyKey: 'kubernetes.io/hostname'
